<resources>
    <string name="app_name">ERP</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Assignments</string>
    <string name="menu_slideshow">Events</string>
    <string name="menu_tools">Professors</string>
    <string name="menu_share">Announcements</string>
    <string name="menu_create_announcement">Create Announcements</string>
    <string name="menu_create_assignment">Create Assignment</string>
    <string name="menu_create_event">Create Event</string>
    <string name="menu_mark_attendance">Mark Attendance</string>
</resources>
