<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.erp.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.erp.fragments.AssignmentsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_assignments" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.erp.fragments.EventsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.erp.fragments.ProfessorsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_professors" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.erp.fragments.AnnouncementsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_announcements" />

</navigation>